Fix responsive Collapse liste équipements

--- a/src/components/Collapse/_collapse.scss
+++ b/src/components/Collapse/_collapse.scss
@@ -90,7 +90,11 @@
             font-size: 16px;           
             padding: 20px;
             display: flex;
-            flex-direction: column;           
+            flex-direction: column; 
+            
+            @media only screen and (max-width : 600px){
+                font-size: 12px;
+            }
         }
     }
 }
