--- a/src/index.css
+++ b/src/index.css
@@ -268,6 +268,11 @@
   display: flex;
   flex-direction: column;
 }
+@media only screen and (max-width: 600px) {
+  .collapse-item .collapse-content ul {
+    font-size: 12px;
+  }
+}
 
 .error-container {
   display: flex;
